<resources>
    <!--<string name="app_name">云南工商业务系统（移动版）</string>-->
    <!--<string name="app_name">四川工商移动监管</string>-->
    <string name="error_data">服务器信息有误</string>
    <string name="error_connect">服务器连接错误</string>
    <string name="report_title">投诉举报处理</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="load_fail">加载失败</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>


    <string name="filter_type">按申请类型</string>
    <string name="filter_time">按申请时间</string>
    <string name="clear">清空</string>
    <string name="ok">确定</string>
    <string name="shenqing_start_time">申请开始时间</string>
    <string name="shenqing_end_time">申请结束时间</string>
    <string name="serach_hint_yushen">请输入企业名称或者注册号</string>
    <string name="menu_filter">筛选</string>
    <string name="jb_result">经办结果：</string>
    <string name="jb_yijian">经办意见</string>
    <string name="jb_renyuan">经办人员</string>
    <string name="jb_jiguan">经办机关</string>
    <string name="jb_shijian">经办时间</string>
    <string name="app_submit">提交</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_about">云南微型企业培育扶持工作信息平台</string>
    <string name="app_date_sq_start">请选择申请开始日期</string>
    <string name="app_date_sq_end">请选择申请结束日期</string>
    <string name="app_clear">清空</string>
    <string name="query">查询</string>
    <string name="entName_input_hint">请输入企业名称或注册号</string>
    <string name="type_select_hint">请选择申请类型</string>
    <string name="status_select_hint">请选择申请状态</string>
    <string name="date_select_hint">请选择申请日期</string>
    <string name="jdcx_title">进度查询结果</string>
    <string name="wqcx_title">小微企业查询结果</string>
    <string name="fccx_title">扶持情况查询结果</string>
    <string name="app_only_current">只看本级</string>
    <string name="app_tj">统计</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="fgdj_back">退回</string>
    <string name="fgdj_edit">编辑</string>
    <string name="fgdj_subscribe">认领</string>
    <string name="fgdj_look">查看</string>

</resources>
