<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ynwq.fragment.JinduQueryFragment">

    <com.wondersgroup.commerce.ynwq.widget.InfoEditBar
        android:id="@+id/jindu_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/jdcx_date_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/app_date_select" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="24dp"
            android:layout_toRightOf="@id/jdcx_date_icon">

            <TextView
                android:id="@+id/jdcx_date_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="~"
                android:textColor="@color/deep_gray"
                android:textSize="14sp" />

            <Button
                android:id="@+id/jdcx_date_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/jdcx_date_divider"
                android:background="@android:color/transparent"
                android:gravity="left|center_vertical"
                android:hint="@string/app_date_sq_start"
                android:textColor="@color/black"
                android:textColorHint="@color/white_gray"
                android:textSize="14sp" />

            <Button
                android:id="@+id/jdcx_date_end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/jdcx_date_divider"
                android:background="@android:color/transparent"
                android:gravity="left|center_vertical"
                android:hint="@string/app_date_sq_end"
                android:textColor="@color/black"
                android:textColorHint="@color/white_gray"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_gray" />
    </RelativeLayout>

    <com.wondersgroup.commerce.ynwq.widget.InfoSelectBar
        android:id="@+id/jindu_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.wondersgroup.commerce.ynwq.widget.InfoSelectBar
        android:id="@+id/jindu_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/jindu_clear"
            style="@style/ButtonNormal.Reverse"
            android:layout_marginLeft="20dp"
            android:text="@string/app_clear" />

        <Button
            android:id="@+id/jindu_search"
            style="@style/ButtonNormal"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/query" />
    </RelativeLayout>

</LinearLayout>
