<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="160dp">
    <View
        android:id="@+id/jb_midbreaker"
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_marginLeft="36dp"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"/>
    <View
        android:id="@+id/jb_upline"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_above="@id/jb_midbreaker"
        android:layout_marginLeft="36dp"
        android:background="@color/colorPrimary"/>
    <View
        android:id="@+id/jb_downline"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_below="@id/jb_midbreaker"
        android:layout_marginLeft="36dp"
        android:background="@color/colorPrimary"/>
    <ImageView
        android:id="@+id/jb_indi"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:scaleType="centerInside"
        android:src="@drawable/app_second"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="4dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="4dp"
        card_view:contentPaddingLeft="24dp"
        card_view:contentPaddingRight="8dp"
        card_view:contentPaddingTop="8dp"
        card_view:contentPaddingBottom="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/jb_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ItemContentTitleLarge"
                android:text="@string/jb_result"/>
            <TextView
                android:id="@+id/jb_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/jb_title_name"
                style="@style/ItemContentTitleLarge" />
            <TextView
                android:id="@+id/jb_yijian_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jb_title_name"
                android:layout_marginTop="12dp"
                android:text="@string/jb_yijian"
                style="@style/ItemContentLarger" />
            <TextView
                android:id="@+id/jb_yijian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jb_title_name"
                android:layout_toRightOf="@id/jb_yijian_name"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="12dp"
                android:singleLine="true"
                style="@style/ItemContentLarger" />
            <TextView
                android:id="@+id/jb_renyuan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jb_yijian_name"
                android:layout_marginTop="6dp"
                android:text="@string/jb_renyuan"
                style="@style/ItemContentLarger" />
            <TextView
                android:id="@+id/jb_renyuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jb_yijian_name"
                android:layout_toRightOf="@id/jb_renyuan_name"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="6dp"
                android:singleLine="true"
                style="@style/ItemContentLarger" />
            <TextView
                android:id="@+id/jb_jiguan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jb_renyuan_name"
                android:layout_marginTop="6dp"
                android:text="@string/jb_jiguan"
                style="@style/ItemContentLarger" />
            <TextView
                android:id="@+id/jb_jiguan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jb_renyuan_name"
                android:layout_toRightOf="@id/jb_jiguan_name"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="6dp"
                android:singleLine="true"
                style="@style/ItemContentLarger" />
            <TextView
                android:id="@+id/jb_shijian_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jb_jiguan_name"
                android:layout_marginTop="6dp"
                android:text="@string/jb_shijian"
                style="@style/ItemContentLarger" />
            <TextView
                android:id="@+id/jb_shijian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jb_jiguan_name"
                android:layout_toRightOf="@id/jb_shijian_name"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="6dp"
                android:singleLine="true"
                style="@style/ItemContentLarger" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>